# astro

./: LICENCE  README.md  exoplanet.py  moondemo.ssc  pyproject.toml  starcount.py
fixtures/: axy-small.fits  axy.fits  corr.fits  rdls.fits  wcs.fits
