[tool.poetry]
name = "astro"
version = "0.1.0"
description = ""
authors = ["Dragon Dave McKee <dave.mckee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
